# stockreport-mcp

./: CHERRY_STUDIO_GUIDE.md  CHERRY_STUDIO_TROUBLESHOOTING.md  CHERRY_STUDIO_USAGE_EXAMPLES.md  DOCUMENTATION_INDEX.md  GITHUB_PUBLISH_SUMMARY.md  GITHUB_RELEASE_CHECKLIST.md  GITHUB_RELEASE_GUIDE.md  HK_STOCKS_FEATURES.md  HYBRID_DATA_SOURCE_SUMMARY.md  HYBRID_USAGE_GUIDE.md  LICENSE  LICENSE_COMPLIANCE_REPORT.md  MCP_CLIENT_COMPATIBILITY_GUIDE.md  PROJECT_HISTORY.md  README.md  RELEASE_NOTES_v1.0.0.md  STARTUP_GUIDE.md  TRAE_CONFIG_FIX.md  TRAE_SETUP.md  TRAE_UNIVERSAL_CONFIG.md  __main__.py  mcp_client_compatibility_report.json  mcp_server.py  pyproject.toml  reset_env.bat  simple_mcp_server.py  start_mcp_server.bat  start_server.bat  start_server.py  system_start.py  test_cherry_config.py  test_client_compatibility.py
src/: akshare_data_source.py  baostock_data_source.py  data_source_interface.py  hybrid_data_source.py  mcp_server.py  utils.py
src/formatting/: markdown_formatter.py
src/tools/: analysis.py  hk_stocks.py  quarter_utils.py  us_stocks.py
