[project]
name = "stockreport-mcp"
version = "0.1.0"
description = "基于 Model Context Protocol (MCP) 的多市场股票数据服务器，支持 A 股、港股、美股等多个市场的数据查询。基于 A-SHARE-MCP 改进，新增 AkShare 数据源、港股分析、财务数据矫正等功能"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "stockreport-mcp", email = "example@example.com"}
]
license = {text = "MIT"}
keywords = ["stock", "finance", "mcp", "a-share", "hk-stock", "us-stock", "baostock", "akshare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "baostock>=0.8.9",
    "akshare>=1.14.0",
    "fastmcp>=0.1.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "pandas>=2.2.3",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.4.26",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx-sse>=0.4.0",
    "idna>=3.10",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "numpy>=2.2.5",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pydantic-settings>=2.9.1",
    "pygments>=2.19.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sse-starlette>=2.3.3",
    "starlette>=0.46.2",
    "tabulate>=0.9.0",
    "typer>=0.15.3",
    "typing-extensions>=4.13.2",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "uvicorn>=0.34.2",
]

[project.urls]
Homepage = "https://github.com/your-username/stockreport-mcp"
Repository = "https://github.com/your-username/stockreport-mcp"
Issues = "https://github.com/your-username/stockreport-mcp/issues"
Documentation = "https://github.com/your-username/stockreport-mcp/blob/main/README.md"

[project.scripts]
stockreport-mcp = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
